# EffPPL

./: README.md  diff.ml  dune  monad.ml  ppl.opam  primitive.ml
_build/: .db  .digest-db  log
_build/default/: a.txt  diff.ml  gmm.txt  primitive.ml
_build/default/.diff.eobjs/: diff.ml.d  dune__exe.ml-gen  dune__exe__Diff.impl.all-deps  monad.ml.d  primitive.ml.d
_build/default/.diff.eobjs/byte/: dune__exe.cmi  dune__exe.cmo  dune__exe.cmt  dune__exe__Diff.cmi  dune__exe__Diff.cmo  dune__exe__Diff.cmt  dune__exe__Primitive.cmi  dune__exe__Primitive.cmo  dune__exe__Primitive.cmt
_build/default/.diff.eobjs/native/: dune__exe.cmx  dune__exe__Diff.cmx  dune__exe__Primitive.cmx
_build/default/.merlin-conf/: exe-diff
lib/: diff.ml  dune  hmc.ml  primitive.ml  printers.ml
lib/_build/: .db  .digest-db  log
lib/_build/default/: diff.ml  effppl.cmxa  effppl.ml-gen  effppl__.ml-gen  hmc.ml  primitive.ml  printers.ml
lib/_build/default/.dune/: configurator.v2
lib/_build/default/.effppl.objs/: diff.ml.d  effppl.impl.all-deps  (+8 more)
lib/models/: autoreg.ml  classification.ml  dune  linreg.ml  moving_avg.ml  sampling.ml  scratch.ml
lib/models/_build/: .db  .digest-db  log
lib/models/machine-learning/: classification.ml  linreg.ml
lib/models/sampling/: beta_sampling.ml  dune
lib/models/time-series/: autoreg.ml  autoreg.py
lib/models/truncated_and_missing_data/: dune  truncated.py
results/: a.py
results/machine_learning/: linreg.py  linreg_cons.txt  linreg_slopes.txt
results/sampling/: beta_samples_(2,1).txt
stan/: autoreg.py  linreg.py  results.txt
(+216 files in other folders)
