opam-version: "2.0"
name: "OwlPPL"
version: "0.1"
synopsis: "A DSL for probabilistic programming"
description: """
A Universal Probabilistic Programming Language for OCaml. Produced for a final year Computer Science project.
"""
maintainer: "Anik Roy"
authors: "ar899@cam.ac.uk"
license: "MIT"
homepage: "https://github.com/anik545/OwlPPL"
dev-repo: "git@github.com:anik545/OwlPPL.git"

depends: [ 
  "ocaml"
  "ocamlfind"
  "owl"
  "owl-plplot"
  "base"
]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]